--- a/etc/feng.conf.in
+++ b/etc/feng.conf.in
@@ -1,9 +1,16 @@
-#include <config.h>
-## default configuration
-root=FENICE_AVROOT_DIR_DEFAULT
-tcp_port=FENICE_RTSP_PORT_DEFAULT
-sctp_port=-1
-max_session=FENICE_MAX_SESSION_DEFAULT
-log_file=FENICE_LOG_FILE_DEFAULT
-## user=feng
-## group=feng
+## lighttpd like configuration
+var.basedir  = "@feng_basedir@"
+var.logdir   = "@feng_logdir@"
+var.statedir = "@feng_statedir@"
+
+server.modules = (
+    "mod_access",
+    "mod_accesslog"
+)
+server.port          = @fenice_rtsp_port@
+server.username      = "feng"
+server.groupname     = "feng"
+server.max-connections = @fenice_max_session@
+server.document-root = var.basedir + "/avroot"
+server.errorlog      = var.logdir  + "/error.log"
+accesslog.filename   = var.logdir + "/access.log"
