--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -1,16 +1,18 @@
 
 feniceincludedir = $(top_srcdir)/include
 
-noinst_LTLIBRARIES = libconf.la
-libconf_la_SOURCES = prefs.c
-
-noinst_LTLIBRARIES += liblight.la
+noinst_LTLIBRARIES = liblight.la
 liblight_la_SOURCES = array.c \
 		      buffer.c \
 		      stream.c \
 		      configparser.c \
 		      proc_open.c \
 		      configfile-glue.c \
-		      configfile.c
+		      configfile.c \
+		      data_array.c \
+		      data_count.c \
+		      data_integer.c \
+		      data_config.c \
+		      data_string.c
 
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
