Fix handling of builddir != srcdir builds.
Signed-off-by: Luca Barbato <lu_zero@gentoo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-feniceincludedir = ../include
+feniceincludedir = $(top_srcdir)/include
 
 noinst_LTLIBRARIES = liblog.la libsafectype.la libutils.la
 
