--- a/eventloop/Makefile.am
+++ b/eventloop/Makefile.am
@@ -3,10 +3,7 @@ feniceincludedir = $(top_srcdir)/include
 
 noinst_LTLIBRARIES = libeventloop.la
 libeventloop_la_SOURCES =	eventloop.c \
-				schedule_connections.c \
-				add_client.c \
-				rtsp_set_fdsets.c \
-				rtsp_server.c
-			
-libeventloop_la_LDFLAGS = -static
+				established_connections.c \
+				incoming_connections.c
+
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
