Make naming consistent part 1

--- a/mediathread/Makefile.am
+++ b/mediathread/Makefile.am
@@ -11,7 +11,7 @@ libmediath_la_LIBADD = parser/libparser.la \
 libmediath_la_SOURCES =	cache.c \
 			demuxer.c \
 			InputStream.c \
-			MediaParser.c \
+			mediaparser.c \
 			mediathread.c \
 			mediautils.c
 
