Reshape dir layout a bit

--- a/configure.ac
+++ b/configure.ac
@@ -306,7 +306,7 @@ AC_CONFIG_FILES([eventloop/Makefile])
 AC_CONFIG_FILES([rtp/Makefile])
 AC_CONFIG_FILES([rtcp/Makefile])
 AC_CONFIG_FILES([rtsp/Makefile])
-AC_CONFIG_FILES([sdp2/Makefile])
+AC_CONFIG_FILES([sdp/Makefile])
 AC_CONFIG_FILES([src/Makefile])
 AC_CONFIG_FILES([schedule/Makefile])
 AC_CONFIG_FILES([multicast/Makefile])
