--- a/etc/feng.conf.in
+++ b/etc/feng.conf.in
@@ -3,10 +3,11 @@ var.basedir  = "@feng_basedir@"
 var.logdir   = "@feng_logdir@"
 var.statedir = "@feng_statedir@"
 
-server.modules = (
-    "mod_access",
-    "mod_accesslog"
-)
+# Non functional right now
+#server.modules = (
+#    "mod_access",
+#    "mod_accesslog"
+#)
 
 # bind to port (defaults to @fenice_rtsp_port@)
 # server.port         = 8554
