100l missing makefile change...

--- a/mediathread/parser/Makefile.am
+++ b/mediathread/parser/Makefile.am
@@ -8,11 +8,12 @@ libparser_la_SOURCES = mpeg12.c \
 
 if FENICE_FFMPEG
 libparser_la_SOURCES += h264.c \
-			 vorbis.c \
-			 theora.c \
-			 aac.c \
-			 mp4ves.c \
-			 h263.c
+			vorbis.c \
+			theora.c \
+			aac.c \
+			mp4ves.c \
+			speex.c \
+			h263.c
 endif
 
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
