--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(feng, 0.1.99)
 AC_CONFIG_AUX_DIR(config)
-AC_CANONICAL_SYSTEM
+AC_CANONICAL_HOST
 AM_INIT_AUTOMAKE(dist-bzip2 check-news)
 
 AC_PREFIX_DEFAULT("/usr")
