--- a/configure.ac
+++ b/configure.ac
@@ -1,12 +1,12 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(feng, 0.1.99)
+AC_INIT([feng], [0.1.99])
 AC_CONFIG_AUX_DIR(config)
 AC_CANONICAL_HOST
 AM_INIT_AUTOMAKE(dist-bzip2 check-news)
 
 AC_PREFIX_DEFAULT("/usr")
 
-AM_CONFIG_HEADER(config.h)
+AM_CONFIG_HEADER([config.h])
 
 AC_ARG_WITH(rtsp-port,
     AS_HELP_STRING([--with-rtsp-port], [default RTSP listening port (default=554, alternative=8554)]),,
