--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@ configure
 *.libs
 config.*
 libtool
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
 stamp-h1
 etc/feng.conf
 src/feng
