Stop checking if NEWS file updated.
The NEWS file is currently used as a ChangeLog and doesn't look like
it's going to be updated for each and every release soon. Instead of
requesting an updated copy of it, leave it alone entirely by switching
to foreign (non-GNU) automake system.

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ AC_PREREQ(2.62)
 AC_INIT([feng], [0.1.99])
 AC_CONFIG_AUX_DIR(config)
 AC_CANONICAL_HOST
-AM_INIT_AUTOMAKE(dist-bzip2 check-news)
+AM_INIT_AUTOMAKE(dist-bzip2 foreign)
 
 AC_PREFIX_DEFAULT("/usr")
 
