Add all the common header files as non-installed headers.
Instead of adding include/ directory to EXTRA_DIST (that breaks "make
dist"), list all the common include files as non-installed headers of
the project.

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,7 +13,37 @@ SUBDIRS +=	sdp \
 		etc \
 		avroot
 
-EXTRA_DIST = 	include
+noinst_HEADERS = \
+	include/fenice/utils.h \
+	include/fenice/mediaparser.h \
+	include/fenice/rtp.h \
+	include/fenice/sdp2.h \
+	include/fenice/demuxer_module.h \
+	include/fenice/description.h \
+	include/fenice/eventloop.h \
+	include/fenice/fnc_log.h \
+	include/fenice/mediaparser_module.h \
+	include/fenice/multicast.h \
+	include/fenice/prefs.h \
+	include/fenice/rtcp.h \
+	include/fenice/rtpptdefs.h \
+	include/fenice/schedule.h \
+	include/fenice/server.h \
+	include/fenice/InputStream.h \
+	include/fenice/mediathread.h \
+	include/fenice/rtsp.h \
+	include/fenice/debug.h \
+	include/fenice/intnet.h \
+	include/fenice/sdp_grammar.h \
+	include/fenice/demuxer.h \
+	include/fenice/mediautils.h \
+	include/fenice/safe-ctype.h \
+	include/conf.h \
+	include/settings.h \
+	include/stream.h \
+	include/configfile.h \
+	include/array.h \
+	include/buffer.h
 
 ACLOCAL_AMFLAGS = -I m4
 
