Add all the header files for convenience libraries are part of the sources.
This way the headers are included in the dist tarball.

--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -6,7 +6,9 @@ liblight_la_SOURCES = array.c \
 		      buffer.c \
 		      stream.c \
 		      configparser.c \
+		      configparser.h \
 		      proc_open.c \
+		      proc_open.h \
 		      configfile-glue.c \
 		      configfile.c \
 		      data_array.c \
