--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ AC_PREREQ(2.62)
 AC_INIT([feng], [0.1.99])
 AC_CONFIG_AUX_DIR(config)
 AC_CANONICAL_HOST
-AM_INIT_AUTOMAKE(dist-bzip2 foreign)
+AM_INIT_AUTOMAKE(dist-bzip2 no-dist-gzip foreign)
 
 AC_PREFIX_DEFAULT("/usr")
 
