Stop libtool from trying to build PIC and shared object versions of the code.
felix is a daemon that install no shared libraries, there is no reason
to actually build shared and PIC versions of the objects. If the user
is using PIE, it will be handled by the compiler already.

--- a/configure.ac
+++ b/configure.ac
@@ -58,7 +58,7 @@ AC_ARG_ENABLE(sctp,
     enable_sctp="yes")
 
 LT_PREREQ([2.2])
-LT_INIT
+LT_INIT([disable-shared no-pic])
 LIBTOOL="$LIBTOOL --silent"
 AC_SUBST([LIBTOOL_DEPS])
 
