Lavoro di venerdì

--- a/mediathread/Makefile.am
+++ b/mediathread/Makefile.am
@@ -1,12 +1,14 @@
 feniceincludedir = $(top_srcdir)/include
 
 SUBDIRS = parser \
-	  demuxer
+	  demuxer \
+	  metadata
 
 noinst_LTLIBRARIES = libmediath.la
 
 libmediath_la_LIBADD = parser/libparser.la \
-		       demuxer/libdemuxer.la
+		       demuxer/libdemuxer.la \
+		       metadata/libmetadata.la
 
 libmediath_la_SOURCES =	cache.c \
 			demuxer.c \
