--- a/configure.ac
+++ b/configure.ac
@@ -288,6 +288,7 @@ AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([mediathread/Makefile])
 AC_CONFIG_FILES([mediathread/parser/Makefile])
 AC_CONFIG_FILES([mediathread/demuxer/Makefile])
+AC_CONFIG_FILES([mediathread/metadata/Makefile])
 AC_CONFIG_FILES([eventloop/Makefile])
 AC_CONFIG_FILES([rtp/Makefile])
 AC_CONFIG_FILES([rtcp/Makefile])
