Aggiunta parte del CPD

--- a/configure.ac
+++ b/configure.ac
@@ -69,6 +69,7 @@ AC_SUBST([LIBTOOL_DEPS])
 AC_C_BIGENDIAN([BIGENDIAN="Big Endian"] AC_DEFINE([WORDS_BIGENDIAN], 1, [Define if manchine is big-endian]),[BIGENDIAN="Little Endian"] )
 
 ACX_PTHREAD(,AC_MSG_ERROR([Missing POSIX Threads support]))
+WITH_MYSQL()
 
 LIBS="$PTHREAD_LIBS $LIBS"
 CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
