--- a/configure.ac
+++ b/configure.ac
@@ -129,7 +129,7 @@ fi
 avformat_msg="no"
 avutil_msg="no"
 if test "x$enable_ffmpeg" = "xyes"; then
-    PKG_CHECK_MODULES(LIBAVFORMAT,[libavformat >= 52.7.0],
+    PKG_CHECK_MODULES(LIBAVFORMAT,[libavformat >= 52.7.0 libavcodec >= 52],
         [AC_DEFINE(HAVE_AVFORMAT,,[Define if libavformat support is available])
          avformat_msg="yes"
          ])
