Remove fncheader.c by moving the one-line fncheader() statically in main.c.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,8 +8,7 @@ liblog_la_SOURCES = fnc_log.c
 
 bin_PROGRAMS = feng
 
-feng_SOURCES =	main.c \
-			fncheader.c
+feng_SOURCES =	main.c
 
 feng_LDADD =	../eventloop/libeventloop.la \
 		../rtsp/librtsp.la \
