--- a/sdp/Makefile.am
+++ b/sdp/Makefile.am
@@ -3,7 +3,6 @@ feniceincludedir = $(top_srcdir)/include
 
 noinst_LTLIBRARIES = libsdp.la
 libsdp_la_SOURCES = sdp_session_descr.c \
-		    sdp_media_descr.c \
-		    sdp_session_id.c
+		    sdp_media_descr.c
 
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
