Remove libtool usage: feng does not build libraries.
Since feng does not build libraries, and all its dependencies are
fully taken care of via pkg-config, there is no reason to use libtool
here.

Interesting to note: by doing this the total size of the code section
for feng was reduced by 2KB.

--- a/eventloop/Makefile.am
+++ b/eventloop/Makefile.am
@@ -1,8 +1,8 @@
 
 feniceincludedir = $(top_srcdir)/include
 
-noinst_LTLIBRARIES = libeventloop.la
-libeventloop_la_SOURCES =	eventloop.c \
+noinst_LIBRARIES = libeventloop.a
+libeventloop_a_SOURCES =	eventloop.c \
 				established_connections.c \
 				incoming_connections.c
 
