--- a/mediathread/demuxer/Makefile.am
+++ b/mediathread/demuxer/Makefile.am
@@ -1,11 +1,11 @@
 feniceincludedir = $(top_srcdir)/include
 
-noinst_LTLIBRARIES = libdemuxer.la
+noinst_LIBRARIES = libdemuxer.a
 
-libdemuxer_la_SOURCES =	demuxer_sd.c \
+libdemuxer_a_SOURCES =	demuxer_sd.c \
 			demuxer_ds.c
 if FENICE_FFMPEG
-libdemuxer_la_SOURCES += demuxer_avf.c
+libdemuxer_a_SOURCES += demuxer_avf.c
 endif
 
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
