--- a/mediathread/parser/Makefile.am
+++ b/mediathread/parser/Makefile.am
@@ -1,14 +1,14 @@
 feniceincludedir = $(top_srcdir)/include
 
-noinst_LTLIBRARIES = libparser.la
+noinst_LIBRARIES = libparser.a
 
-libparser_la_SOURCES = mpeg12.c \
+libparser_a_SOURCES = mpeg12.c \
 			mpegaudio.c \
 			mpeg2t.c \
 			mpeg.h
 
 if FENICE_FFMPEG
-libparser_la_SOURCES += h264.c \
+libparser_a_SOURCES += h264.c \
 			vorbis.c \
 			theora.c \
 			aac.c \
