--- a/multicast/Makefile.am
+++ b/multicast/Makefile.am
@@ -1,7 +1,7 @@
 
 feniceincludedir = $(top_srcdir)/include
 
-noinst_LTLIBRARIES = libmulticast.la
-libmulticast_la_SOURCES = is_valid_multicast_address.c 
+noinst_LIBRARIES = libmulticast.a
+libmulticast_a_SOURCES = is_valid_multicast_address.c 
 
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
