--- a/rtp/Makefile.am
+++ b/rtp/Makefile.am
@@ -1,8 +1,8 @@
 
 feniceincludedir = $(top_srcdir)/include
 
-noinst_LTLIBRARIES = librtp.la
-librtp_la_SOURCES = RTP_port.c \
-                    RTP_transport.c
+noinst_LIBRARIES = librtp.a
+librtp_a_SOURCES = RTP_port.c \
+                   RTP_transport.c
 
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
