--- a/rtsp/Makefile.am
+++ b/rtsp/Makefile.am
@@ -1,8 +1,8 @@
 
 feniceincludedir = $(top_srcdir)/include
 
-noinst_LTLIBRARIES = librtsp.la
-librtsp_la_SOURCES =	RTSP_utils.c \
+noinst_LIBRARIES = librtsp.a
+librtsp_a_SOURCES =	RTSP_utils.c \
 			RTSP_utils.h \
 			RTSP_state_machine.c \
 			RTSP_lowlevel.c \
