--- a/schedule/Makefile.am
+++ b/schedule/Makefile.am
@@ -1,13 +1,13 @@
 
 feniceincludedir = $(top_srcdir)/include
 
-noinst_LTLIBRARIES = libschedule.la
-libschedule_la_SOURCES = schedule_init.c \
-			 schedule_start.c \
-			 schedule_stop.c \
-			 schedule_do.c \
-			 schedule_resume.c \
-			 schedule_add.c \
-			 schedule_remove.c
+noinst_LIBRARIES = libschedule.a
+libschedule_a_SOURCES = schedule_init.c \
+			schedule_start.c \
+			schedule_stop.c \
+			schedule_do.c \
+			schedule_resume.c \
+			schedule_add.c \
+			schedule_remove.c
 
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
