--- a/sdp/Makefile.am
+++ b/sdp/Makefile.am
@@ -1,8 +1,8 @@
 
 feniceincludedir = $(top_srcdir)/include
 
-noinst_LTLIBRARIES = libsdp.la
-libsdp_la_SOURCES = sdp_session_descr.c \
-		    sdp_media_descr.c
+noinst_LIBRARIES = libsdp.a
+libsdp_a_SOURCES = sdp_session_descr.c \
+		   sdp_media_descr.c
 
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
