Simplify Makefiles, remove Makefile for mediathread/{parser,demuxer}.
Avoid recursive make for mediathread parsers and demuxers, build all
the sources in a single libmediath.a commodity library.

Cleanup the Makefile for src/ by removing liblog and just building
fnc_log.c in the feng binary.

--- a/mediathread/Makefile.am
+++ b/mediathread/Makefile.am
@@ -1,8 +1,5 @@
 feniceincludedir = $(top_srcdir)/include
 
-SUBDIRS = parser \
-	  demuxer
-
 noinst_LIBRARIES = libmediath.a
 
 libmediath_a_SOURCES =	cache.c \
@@ -10,6 +7,24 @@ libmediath_a_SOURCES =	cache.c \
 			InputStream.c \
 			mediaparser.c \
 			mediathread.c \
-			mediautils.c
+			mediautils.c \
+			parser/mpeg12.c \
+			parser/mpegaudio.c \
+			parser/mpeg2t.c \
+			parser/mpeg.h \
+			demuxer/demuxer_sd.c \
+			demuxer/demuxer_ds.c
+
+if FENICE_FFMPEG
+libmediath_a_SOURCES += parser/h264.c \
+			parser/vorbis.c \
+			parser/theora.c \
+			parser/aac.c \
+			parser/mp4ves.c \
+			parser/speex.c \
+			parser/h263.c \
+			demuxer/demuxer_avf.c
+endif
+
 
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
