--- a/sdp/Makefile.am
+++ b/sdp/Makefile.am
@@ -2,7 +2,6 @@
 feniceincludedir = $(top_srcdir)/include
 
 noinst_LIBRARIES = libsdp.a
-libsdp_a_SOURCES = sdp_session_descr.c \
-		   sdp_media_descr.c
+libsdp_a_SOURCES = sdp_session_descr.c
 
 INCLUDES = -I$(feniceincludedir) -I$(top_srcdir)
