Move eventloop.c and eventloop.h in src/.
Since the eventloop is only ever used starting from main.c, move it in
the src/ directory, with its include file (which is not generic at
all).

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,10 +2,10 @@ feniceincludedir = $(top_srcdir)/include
 
 bin_PROGRAMS = feng
 
-feng_SOURCES = main.c fnc_log.c
+feng_SOURCES = main.c fnc_log.c \
+		eventloop.c eventloop.h
 
-feng_LDADD =	../eventloop/libeventloop.a \
-		../rtsp/librtsp.a \
+feng_LDADD =	../rtsp/librtsp.a \
 		../sdp/libsdp.a \
 		../schedule/libschedule.a \
 		../rtcp/librtcp.a \
