Move is_valid_multicast_address.c and sdp_session_descr.c in src/.
Instead of splitting the sources over multiple small directories, try
to compact them to make it take less time to build.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,12 +1,10 @@
 SUBDIRS =	mediathread \
-		multicast \
 		conf \
 		rtp \
 		rtcp \
 		rtsp
 
-SUBDIRS +=	sdp \
-		src \
+SUBDIRS +=	src \
 		docs \
 		etc \
 		avroot
