--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,14 +4,14 @@ bin_PROGRAMS = feng
 
 feng_SOURCES = main.c fnc_log.c \
 		eventloop.c eventloop.h \
-		schedule.c
+		schedule.c \
+		sdp_session_descr.c \
+		is_valid_multicast_address.c
 
 feng_LDADD =	../rtsp/librtsp.a \
-		../sdp/libsdp.a \
 		../rtcp/librtcp.a \
 		../rtp/librtp.a \
 		../mediathread/libmediath.a \
-		../multicast/libmulticast.a \
 		../conf/liblight.a
 
 INCLUDES = -I$(feniceincludedir) -I..
