Use variable instead of substitutions in Makefile.am.

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,6 +42,6 @@ EXTRA_DIST = RELEASE
 
 ACLOCAL_AMFLAGS = -I m4
 
-FENICE_AVROOT_DIR = @fenice_avroot_dir@
-FENICE_LOG_FILE = `basename @fenice_log_file@`
+FENICE_AVROOT_DIR = $(fenice_avroot_dir)
+FENICE_LOG_FILE = `basename $(fenice_log_file)`
 
