Avoid recursive make calls for docs, etc and avroot that build nothing.
Instead of using recursive makefiles, declare the installed files in
the top level makefile, like it's being done for header files.

Avoiding recursive make calls reduce the overhead that automake adds
to the build process.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,10 +3,7 @@ SUBDIRS =	mediathread \
 		rtp \
 		rtcp \
 		rtsp \
-		src \
-		docs \
-		etc \
-		avroot
+		src
 
 noinst_HEADERS = \
 	include/fenice/utils.h \
@@ -45,3 +42,14 @@ ACLOCAL_AMFLAGS = -I m4
 FENICE_AVROOT_DIR = $(fenice_avroot_dir)
 FENICE_LOG_FILE = `basename $(fenice_log_file)`
 
+avrootdir = $(fenice_avroot_dir)
+
+dist_avroot_DATA = \
+	avroot/h264.ds \
+	avroot/h264_scramble.ds \
+	avroot/test.mov 
+
+feng_confdir = $(fenice_conf_dir)
+dist_feng_conf_DATA = etc/feng.conf
+
+dist_man_MANS = docs/feng.1
