--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,5 @@
+SUBDIRS = mediathread network .
+
 feniceincludedir = $(top_srcdir)/include
 
 bin_PROGRAMS = feng
@@ -8,10 +10,8 @@ feng_SOURCES = main.c fnc_log.c \
 		sdp_session_descr.c \
 		is_valid_multicast_address.c
 
-feng_LDADD =	../rtsp/librtsp.a \
-		../rtcp/librtcp.a \
-		../rtp/librtp.a \
-		../mediathread/libmediath.a \
+feng_LDADD =	network/libnetwork.a \
+		mediathread/libmediath.a \
 		../conf/liblight.a
 
 INCLUDES = -I$(feniceincludedir) -I..
