--- a/configure.ac
+++ b/configure.ac
@@ -217,7 +217,7 @@ AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([src/Makefile])
 AC_CONFIG_FILES([src/mediathread/Makefile])
 AC_CONFIG_FILES([src/network/Makefile])
-AC_CONFIG_FILES([conf/Makefile])
+AC_CONFIG_FILES([src/conf/Makefile])
 AC_CONFIG_FILES([etc/feng.conf])
 AC_CONFIG_FILES([etc/feng-uninstalled.conf])
 AC_CONFIG_FILES([Doxyfile])
