--- a/configure.ac
+++ b/configure.ac
@@ -110,6 +110,10 @@ PKG_CHECK_MODULES(LIBBUFFERPOOL,[libbufferpool >= 0.0.3])
 CFLAGS="$CFLAGS $LIBBUFFERPOOL_CFLAGS"
 LIBS="$LIBS $LIBBUFFERPOOL_LIBS"
 
+PKG_CHECK_MODULES(LIBERIS,[liberis])
+CFLAGS="$CFLAGS $LIBERIS_CFLAGS"
+LIBS="$LIBS $LIBERIS_LIBS"
+
 PKG_CHECK_MODULES([GLIB], [glib-2.0 >= 2.16 gthread-2.0])
 CFLAGS="$CFLAGS $GLIB_CFLAGS"
 LIBS="$LIBS $GLIB_LIBS"
